# nannou-workspace

./: .gitignore  Cargo.toml  README.md  base_app_template.rs
catppuccin-schotter/: Cargo.toml
catppuccin-schotter/src/: main.rs
catppuccin-schotter/src/catppuccin/: catppuccin.rs  mod.rs
catppuccin-schotter/src/stone/: mod.rs  stone.rs
catpuccin-schotter/: Cargo.toml
flower/: Cargo.toml
flower/src/: main.rs
images/: combine.py
promise/: Cargo.toml
promise/src/: main.rs
schotter1/: Cargo.toml
schotter1/src/: main.rs
schotter2/src/: main.rs
sidwellr-schotter/schotter2/: Cargo.toml
sidwellr-schotter/schotter3/: Cargo.toml
sidwellr-schotter/schotter4/: Cargo.toml
sidwellr-schotter/schotter4/src/: main.rs
