[package]
name = "catppuccin-schotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.18.1"           # A Creative Coding Framework for Rust.
nannou_egui = "0.5.0"       # egui integration for nannou
rand = "0.8.5"              # Random number generators and other randomness functionality. 
